create and find on database

--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,20 @@
     "name": "damian/netshowinterview",
     "description": "this is a interview test",
     "license": "MIT",
-    "autoload": {
-        "psr-4" : {
-            "Source\\" : "source/"
-        }
-    },
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "dan9903",
             "email": "mnssd2@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
-    "require": {}
+    "autoload": {
+        "psr-4" : {
+            "Source\\" : "source/"
+        }
+    },
+    "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "^6.4"
+    }
 }
