--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
             "Source\\" : "source/"
         }
     },
-    "require": {},
+    "require": {
+        "twig/twig": "^3.0",
+        "coffeecode/uploader": "1.0.*"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
     }
