--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require": {
         "twig/twig": "^3.0",
-        "coffeecode/uploader": "1.0.*"
+        "coffeecode/uploader": "1.0.*",
+        "phpmailer/phpmailer": "~6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
